@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-29T08:10:48Z",
+  "timestamp" : "2023-10-29T16:11:28Z",
   "count_outdated" : 1418,
   "uniques_outdated" : 769,
-  "count" : 1447,
+  "count" : 1448,
   "uniques" : 786,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
